--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -31,16 +31,45 @@
     "project5": "المشروع الخامس"
   },
   "services": {
+    "popup_button": "استكشاف المشاريع",
     "title": "الخدمات",
     "items": {
-      "Swimming_Pools": "حمامات السباحة",
-      "Health_Club_and_Spa": "النادي الصحي والسبا",
-      "Commercial_Areas": "المناطق التجارية",
-      "Security_and_Guarding": "الأمن والحراسة",
-      "Childrens_Area": "منطقة الأطفال",
-      "Bicycle_Paths": "مسارات الدراجات",
-      "Sports_Fields": "الملاعب الرياضية",
-      "Parking": "موقف السيارات"
+      "Swimming_Pools": {
+        "title": "حمامات السباحة",
+        "text": "مجموعة متنوعة من حمامات السباحة المخصصة للكبار والأطفال، لضمان تجربة آمنة وممتعة لجميع أفراد العائلة."
+      },
+      "Health_Club_and_Spa": {
+        "title": "النادي الصحي والسبا",
+        "text": "مركز رياضي متكامل ومنطقة سبا تقدم مرافق لياقة بدنية، مناطق استرخاء، وخدمات العناية بالصحة."
+      },
+      "Commercial_Areas": {
+        "title": "المناطق التجارية",
+        "text": "مقاهي ومطاعم وسوبرماركت متوفرة لتلبية الاحتياجات اليومية داخل المجتمع."
+      },
+      "Security_and_Guarding": {
+        "title": "الأمن والحراسة",
+        "text": "خدمات أمن وحراسة على مدار الساعة لضمان الأمان والراحة وراحة البال."
+      },
+      "Childrens_Area": {
+        "title": "منطقة الأطفال",
+        "text": "مناطق لعب آمنة مخصصة للأطفال ليستمتعوا بأنشطتهم الترفيهية تحت إشراف آمن."
+      },
+      "Bicycle_Paths": {
+        "title": "مسارات الدراجات",
+        "text": "مسارات مخصصة لركوب الدراجات والمشي مصممة للأمان واللياقة والترفيه."
+      },
+      "Sports_Fields": {
+        "title": "الملاعب الرياضية",
+        "text": "ملاعب متعددة الأغراض للتنس وكرة القدم وكرة السلة، توفر للسكان أماكن للبقاء نشطين ومندمجين."
+      },
+      "Parking": {
+        "title": "مواقف السيارات",
+        "text": "مرافق مواقف خاصة مخصصة لكل وحدة، لضمان الأمان والراحة للسكان."
+      }
     }
+  },
+  "logoCarousel": {
+    "title": "شركائنا",
+    "button": "عرض الكل ←"
   }
 }
