--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -12,7 +12,16 @@
     "readMore": "اقرأ المزيد",
     "contactUs": "تواصل معنا"
   },
+  "contact": {
+    "emailLabel": "راسلنا",
+    "callLabel": "اتصل بنا",
+    "visitLabel": "موقعنا",
+    "email": "hr@investwithflash.com",
+    "phone": "201118883882+",
+    "address": "فيلا 335، النرجس 1، شارع 90، التجمع الخامس - القاهرة الجديدة | مصر"
+  },
   "footer": {
-    "rights": "جميع الحقوق محفوظة."
+    "rights": "فلاش إنفستمنت 2025. جميع الحقوق محفوظة.",
+    "developed": "تم التطوير والتصميم بواسطة"
   }
 }
