--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,7 +12,16 @@
     "readMore": "Read More",
     "contactUs": "Contact Us"
   },
+  "contact": {
+    "emailLabel": "EMAIL US",
+    "callLabel": "CALL US",
+    "visitLabel": "VISIT US",
+    "email": "hr@investwithflash.com",
+    "phone": "+201118883882",
+    "address": "Villa 335, Al Narges 1, 90 St. Fifth Settlement - New Cairo | Egypt"
+  },
   "footer": {
-    "rights": "All rights reserved."
+    "rights": "Flash Investment 2025. All Rights Reserved.",
+    "developed": "Developed & Designed by"
   }
 }
