--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -31,16 +31,45 @@
     "project5": "project five"
   },
   "services": {
+    "popup_button": "Explore Projects",
     "title": "Services",
     "items": {
-      "Swimming_Pools": "Swimming_Pools",
-      "Health_Club_and_Spa": "Health_Club_and_Spa",
-      "Commercial_Areas": "Commercial_Areas",
-      "Security_and_Guarding": "Security_and_Guarding",
-      "Childrens_Area": "Childrens_Area",
-      "Bicycle_Paths": "Bicycle_Paths",
-      "Sports_Fields": "Sports_Fields",
-      "Parking": "Parking"
+      "Swimming_Pools": {
+        "title": "Swimming_Pools",
+        "text": "Various swimming pools designed for both adults and children, ensuring safe and enjoyable experiences for the entire family."
+      },
+      "Health_Club_and_Spa": {
+        "title": "Health_Club_and_Spa",
+        "text": "A fully integrated sports center and spa area offering fitness facilities, relaxation zones, and wellness services."
+      },
+      "Commercial_Areas": {
+        "title": "Commercial_Areas",
+        "text": "Conveniently located cafes, restaurants, and a supermarket to meet daily needs within the community."
+      },
+      "Security_and_Guarding": {
+        "title": "Security_and_Guarding",
+        "text": "24/7 security and professional guarding services to ensure safety, comfort, and peace of mind."
+      },
+      "Childrens_Area": {
+        "title": "Childrens_Area",
+        "text": "Safe, designated play areas where children can enjoy recreational activities under secure supervision."
+      },
+      "Bicycle_Paths": {
+        "title": "Bicycle_Paths",
+        "text": "Dedicated cycling and walking paths designed for safety, fitness, and leisure."
+      },
+      "Sports_Fields": {
+        "title": "Sports_Fields",
+        "text": "Multi-purpose courts for tennis, football, and basketball, offering residents spaces to stay active and engaged."
+      },
+      "Parking": {
+        "title": "Parking",
+        "text": "Private parking facilities allocated for each unit, ensuring security and convenience for residents."
+      }
     }
+  },
+  "logoCarousel": {
+    "title": "PARTNERS",
+    "button": "Show all →"
   }
 }
