--- a/public/locales/ar/contact.json
+++ b/public/locales/ar/contact.json
@@ -9,6 +9,19 @@
         "site_visit": "زيارة ميدانية",
         "join_us": "انضم إلينا"
       }
+    },
+    "form": {
+      "back": "← رجوع",
+      "title": "تواصل معنا",
+      "placeholders": {
+        "full_name": "الاسم الكامل*",
+        "email": "البريد الإلكتروني*",
+        "phone": "رقم الموبايل*",
+        "job_title": "المسمى الوظيفي (اختياري)",
+        "company_name": "اسم الشركة",
+        "message": "رسالتك"
+      },
+      "button": "إرسال"
     }
   }
 }
