--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -1,9 +1,9 @@
 {
   "hero": {
-    "line1": "حيث",
-    "line2": "السرعة",
-    "line3": "تلتقي",
-    "line4": "بالنجاح",
+    "line1": "حيث السرعة",
+    "line2": "تلتقي بالنجاح",
+    "line3": "",
+    "line4": "",
     "paragraph": "في فلاش إنفستمنت، نؤمن أن العقارات أكثر من مجرد مبانٍ—إنها تتعلق ببناء المجتمعات وخلق قيمة مستدامة. مع فريق يضم أكثر من 100 خبير ومقرنا الرئيسي في القاهرة، نقدم مشروعات سكنية وتجارية مبتكرة تعيد تعريف مشهد العقارات في مصر.",
     "button": "اعرف المزيد"
   },
