--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,9 +1,9 @@
 {
   "hero": {
-    "line1": "WHERE",
-    "line2": "SPEED",
-    "line3": "MEETS",
-    "line4": "SUCCESS",
+    "line1": "WHERE SPEED",
+    "line2": "MEETS SUCCESS",
+    "line3": "",
+    "line4": "",
     "paragraph": "At Flash Investment, we believe real estate is more than buildings—it’s about shaping communities and creating lasting value. With a team of 100+ experts and our headquarters in Cairo, we deliver innovative residential and commercial projects that redefine Egypt’s property landscape.",
     "button": "LEARN MORE"
   },
