--- a/public/locales/ar/contact.json
+++ b/public/locales/ar/contact.json
@@ -22,6 +22,33 @@
         "message": "رسالتك"
       },
       "button": "إرسال"
+    },
+    "site_visit": {
+      "back": "← رجوع",
+      "title": "حجز زيارة للموقع",
+      "placeholders": {
+        "full_name": "الاسم بالكامل*",
+        "email": "البريد الإلكتروني*",
+        "phone": "رقم الهاتف المحمول*",
+        "date": "اختر التاريخ*",
+        "message": "الرسالة"
+      },
+      "button": "احجز الآن"
+    },
+    "join_crew": {
+      "back": "← رجوع",
+      "title": "عايز تنضم لفريقنا؟",
+      "placeholders": {
+        "full_name": "الاسم بالكامل*",
+        "email": "البريد الإلكتروني*",
+        "phone": "رقم الهاتف المحمول*"
+      },
+      "upload": {
+        "choose_or_drag": "اختر ملف أو اسحبه هنا",
+        "file_selected": "تم اختيار الملف",
+        "remove": "حذف"
+      },
+      "button": "إرسال"
     }
   }
 }
